
*****

Simplified cd() context manager, using a decorator.

*****

Some cosmetics cleanup in __main__.py

*****

Added message at end of merge() call with the number of new entries.

*****

Fixed bug in compile_pdflatex(), I forgot to call build_bib().

*****

Modified build_bib() to return the list of missing keys.
Used this output to display missing refs at the end of
compile_latex() and compile_pdflatex().

*****

Modifications to bm.export() function:
Added header text at begining of bibmanager output .bib files.
If bibmanager attempts to overwrite a user's bibfile (one that does
not begin with the bibmanager header), make a copy labeled as:
orig_yyyy-mm-dd_bibfile.

*****

Fixed bug in bm.export() function, check that input file exists
before checking for overwrite.

*****

Added try-finally sequence to bm.edit() to ensure always removing
the temporary file.

*****

Minor cosmetics in bm.edit().

*****

Bumped bibmanager version to 0.3.1.
This next merge closes #9


*****  Sun Dec 30 11:39:31 CLT 2018  *****

Drafted config file, and config_manager.py to handle the variables
in the config file.
Implemented cm.reset().

*****

Implemented cm.get_key() function to display config values.

*****

Implemented cm.set_key() function to set bibmanager config values.
Display help when input value is None (implemented for 'style' and 'paper').

*****

Updates to cm.set_key() function.
Added docstring, put exceptions before updating the values,
added help docs for 'text_editor' option.

*****

Added help docs for 'adstoken' key.

*****

Split cm.get_key() function into get() and display().
Added examples to docstring.

*****

Split cm.set_key() function into set() and help().
Added examples to set() docstring.

*****

Sorted order of functions in config_manager.py (cosmetics).

*****

Added list of functions to __all__ in config_manager.py
Cleaned up bib_manager.py

*****

Modified bibmanager to take the pygments style from the config file.

*****
